mouse-hole reflection

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,6 +20,9 @@
     </ol>
 https://youtu.be/pw6shMBnISQ
     <hr />
+    #2a1f10
+    #fff
+    #6c512e
   -->
   <h2 class="date">Wednesday October 4th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
