--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -20,30 +20,46 @@
     </ol>
 https://youtu.be/pw6shMBnISQ
     <hr />
-    #2a1f10
-    #fff
-    #6c512e
+
   -->
-  <h2 class="date">Wednesday October 4th, 2017</h2>
+  <h2 class="date">Wednesday October 5th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
-  <h3 class="subtitle">I've started on a project that is the UI for a larger project... --Oy. Eating an elephant one bite at a time. It is an attempt to draw (with pure css) the inside of a living-room where the windows contain the calls-to-action. Cel animation is used for rain. <br />
-    I've always wanted to try a cel animation rendering rain like this...</h3><img class="w20 right" src="./img/animerain.gif" alt="anime rain">
-    <h3 class="subtitle">Anyway, it has a really nice effect-- <a target="_blank" href="https://codepen.io/beau_dev/">HERE</a> I've split up the css components with a mind toward modularity--keeping RWD in mind. It's not HUGE progress, but finally... progress that I'm proud of.<br />
-    I'm also planning to srcset all the images.</h3>
+  <h3 class="subtitle">Continuing on the project. Doing some illustrator drawing in order to make an animated city-scene much like this</h3><img class="w20 right" src="./img/city.gif" alt="anime city">
+    <h3 class="subtitle">using $('this')  to target twisty handles on window-doors<a target="_blank" href="https://codepen.io/beau_dev/full/NavWog/">HERE</a> is the progress. <br /></h3>
 
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>Do sounds for mouseover, click, etc for one window. The rest will be easy. --Using <a target="_blank" href="https://courses.wesbos.com/account/access/5849e6dd59cff71e8ec6b257/view/6cf22385d8">Wes Bos's tutorial</a> for the sounds.</li>
-    <li></li>
-    <li><span class="ltred">Potential Blocks:</span></li>
+    <li>Work further on twisty handles to depict brass handles.</li>
+    <li>Add SVG for cityscape</li>
+    <li><span class="ltred">Potential Blocks:</span> none!</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Sounds for second call to action (window) done!</li>
+    <li>City.svg done. (needs work): Study perspective view tool in illustrator</li>
   </ol>
-https://youtu.be/pw6shMBnISQ
-  <hr />
+
+  <hr />  <h2 class="date">Wednesday October 4th, 2017</h2>
+    <h4 class="sleep">Slept: 5 hours</h4><br><br>
+    <h3 class="subtitle">I've started on a project that is the UI for a larger project... --Oy. Eating an elephant one bite at a time. It is an attempt to draw (with pure css) the inside of a living-room where the windows contain the calls-to-action. Cel animation is used for rain. <br />
+      I've always wanted to try a cel animation rendering rain like this...</h3><img class="w20 right" src="./img/animerain.gif" alt="anime rain">
+      <h3 class="subtitle">Anyway, it has a really nice effect-- <a target="_blank" href="https://codepen.io/beau_dev/">HERE</a> I've split up the css components with a mind toward modularity--keeping RWD in mind. It's not HUGE progress, but finally... progress that I'm proud of.<br />
+      I'm also planning to srcset all the images.</h3>
+
+    <br>
+    <h3>To do:</h3>
+    <ol class="todo">
+      <li>Do sounds for mouseover, click, etc for one window. The rest will be easy. --Using <a target="_blank" href="https://courses.wesbos.com/account/access/5849e6dd59cff71e8ec6b257/view/6cf22385d8">Wes Bos's tutorial</a> for the sounds.</li>
+      <li></li>
+      <li><span class="ltred">Potential Blocks:</span> none!</li>
+    </ol><br>
+    <h3>Done: </h3>
+    <ol class="done">
+      <li>Sounds Done! -- Not so painful. Hours of dancing with the DOM</li>
+    </ol>
+
+    <hr />
   <h2 class="date">Friday September 29th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Getting back in to GSAP while iterating over React stuff.</h3>
