--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -22,6 +22,23 @@ https://youtu.be/pw6shMBnISQ
     <hr />
 
   -->
+  <h2 class="date">Wednesday October 11th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Doing lots of work on this <a href="https://codepen.io/beau_dev/full/NavWog/" target="_blank">pen</a> Learned about hosting with rawgit--very helpful and <a href="https://rawgit.com/" target="_blank">simple</a> Started to get back to <a href="https://www.codewars.com/dashboard" target="_blank">codewars</a>, as well--frustrating but successful...</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"><p lang="en" dir="ltr">Draw a horizontal tree using CSS pseudo elements :: <a href="https://t.co/LsxTL3skcI">https://t.co/LsxTL3skcI</a></p>&mdash; CSS-Tricks (@Real_CSS_Tricks) <a href="https://twitter.com/Real_CSS_Tricks/status/898982909759107074?ref_src=twsrc%5Etfw">August 19, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>More Webpack work</li>
+    <li>React Training: Wesbos... Again.</li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+https://youtu.be/pw6shMBnISQ
+  <hr />
   <h2 class="date">Wednesday October 5th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Continuing on the project. Doing some illustrator drawing in order to make an animated city-scene much like this</h3><img class="w20 right" src="./img/city.gif" alt="anime city">
