--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -35,9 +35,8 @@ https://youtu.be/pw6shMBnISQ
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>...pending</li>
   </ol>
-https://youtu.be/pw6shMBnISQ
   <hr />
   <h2 class="date">Wednesday October 5th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
