--- a/states/react/react.html
+++ b/states/react/react.html
@@ -4,6 +4,72 @@
   <div class="react-entry entry">
     <pre>
     <!--entire page pre-->
+
+    <div class="softsand-bg brdr-b dkblue">
+      <h1 class="ctrtxt softwhite thin">Sample react static component <em class="softred">...reformatted</em></h1>
+      <h5 class="fRight">With special thanks to <a target="_blank" href="https://reactforbeginners.com/">Wesbos</a></h5>
+
+Feeding to a component is app.js
+  <pre class="w50 prettyprint ctr">import React from 'react';
+import Winner from './Winner';
+
+class App extends React.Component {
+    render() {
+        return(
+            < div className="announcement">
+                < div className="news">
+                 < Winner tagline="John Wilson"/>
+                < /div>
+            < /div>
+        )
+    }
+}
+
+export default App; </pre>
+
+Winner.js
+<pre class="prettyprint w50 ctr">import React from 'react';
+
+class Winner extends React.Component {
+    render() {
+        return (
+            < header className="employee-of-month">
+                < h1>Congratulations!< /h1>
+                < h2 className="tagline">{this.props.winner}< /h2>
+                < h3 className="jobtitle">< /h3>
+                < h5 className="department">< /h5>
+            < /header >
+        )
+    }
+}
+
+export default Winner;
+</pre>
+This component simply renders html to the DOM. It only does one thing.
+So, we only need a "Stateless Functional Component". We only need render();
+
+1) Delete the class component
+2) Delete the "render() { ...}"
+3) Put the whole thing on a function definition returning the whole thing.
+4) Make sure this function is passed <em class="dkorange med">props</em>...
+
+<pre class="prettyprint w50 ctr">import React from 'react';
+
+const Winner = (props) => {
+  return (
+      < header className="employee-of-month">
+          < h1>Congratulations!< /h1>
+          < h2 className="tagline">{this.props.winner}< /h2>
+          < h3 className="jobtitle">< /h3>
+          < h5 className="department">< /h5>
+      < /header >
+  )
+}
+
+export default Winner;
+</pre>
+
+    </div>
     <div class="simple-wine-frame thin softwhite"><h1 class="ctrtxt wh">Barest Bones of a React Component</h1>
 (This is without JSX)
       <pre class="dkbg2 w60 ctr">
