--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,7 +3,7 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Saturday September 23rd, 2017</h2>
+    <h2 class="date">Tuesday October 17th, 2017</h2>
     <h4 class="sleep">Slept: 6 hours</h4><br><br>
     <h3 class="subtitle"> placeholder</h3>
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
@@ -22,6 +22,24 @@ https://youtu.be/pw6shMBnISQ
     <hr />
 
   -->
+  <h2 class="date">Tuesday October 17th, 2017</h2>
+  <h4 class="sleep">Slept: 6 hours</h4><br><br>
+  <h3 class="subtitle">Lots of work done on doing a hybrid of a RWD design in react. Painpoint is dealing with how many components to create & which ones should be dynamic and how to implement them. Lots to solve... React is difficult for interesting reasons.</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">18 Things I Wish I’d Known When Starting Out in UX Design :: <a href="https://t.co/LddqcC5ca8">https://t.co/LddqcC5ca8</a></p>&mdash; CSS-Tricks (@Real_CSS_Tricks) <a href="https://twitter.com/Real_CSS_Tricks/status/895419425683361792?ref_src=twsrc%5Etfw">August 9, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Continue tomatoes react</li>
+    <li>Solve background component for RWD design project</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span>Sick today... Low energy level. :(</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Wednesday October 11th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Doing lots of work on this <a href="https://codepen.io/beau_dev/full/NavWog/" target="_blank">pen</a> Learned about hosting with rawgit--very helpful and <a href="https://rawgit.com/" target="_blank">simple</a> Started to get back to <a href="https://www.codewars.com/dashboard" target="_blank">codewars</a>, as well--frustrating but successful...</h3>
