--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,12 +31,13 @@ https://youtu.be/pw6shMBnISQ
   <ol class="todo">
     <li>Continue tomatoes react</li>
     <li>Solve background component for RWD design project</li>
-    <li></li>
+    <li>Add entry of fizzbuzz solved via a ternary (ecma view)</li>
     <li><span class="ltred">Potential Blocks:</span>Sick today... Low energy level. :(</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Add entry of fizzbuzz solved via a ternary (ecma view)</li>
+    <li>Work on RWD (react) project</li>
   </ol>
   <hr />
 
