react snippit added

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,9 +3,9 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Tuesday October 17th, 2017</h2>
-    <h4 class="sleep">Slept: 6 hours</h4><br><br>
-    <h3 class="subtitle"> placeholder</h3>
+    <h2 class="date">Wednesday October 18th, 2017</h2>
+    <h4 class="sleep">Slept: 5 hours</h4><br><br>
+    <h3 class="subtitle">Doing <a></a></h3>
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
     <br>
     <h3>To do:</h3>
@@ -18,10 +18,28 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-https://youtu.be/pw6shMBnISQ
+https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-contents
     <hr />
 
   -->
+  <h2 class="date">Wednesday October 18th, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Doing <a target="_blank" href="https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-contents">Pluralsight</a>'s training. The basic stuff is coming easier. Going thru basics is necessary and I'm actually enjoying it. I'm learning over and over it's important to crawl before I walk.</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr">In this 11 minute video I build a StopWatch <a href="https://twitter.com/reactjs?ref_src=twsrc%5Etfw">@reactjs</a>
+  component in a way you may not expect before cleaning it up <a href="https://t.co/aGaYXqgj18">https://t.co/aGaYXqgj18</a> ⚛️</p>&mdash; Kent C. Dodds (@kentcdodds) <a href="https://twitter.com/kentcdodds/status/920674067132252160?ref_src=twsrc%5Etfw">October 18, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Continue with Game Creation in Plsight Training</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span>none!</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+
+  <hr />
   <h2 class="date">Tuesday October 17th, 2017</h2>
   <h4 class="sleep">Slept: 6 hours</h4><br><br>
   <h3 class="subtitle">Lots of work done on doing a hybrid of a RWD design in react. Painpoint is dealing with how many components to create & which ones should be dynamic and how to implement them. Lots to solve... React is difficult for interesting reasons.</h3>
