--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,7 +31,7 @@ https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-co
   <h3>To do:</h3>
   <ol class="todo">
     <li>Continue with Game Creation in Plsight Training</li>
-    <li></li>
+    <li><a target="_blank" href="https://codepen.io/beau_dev/pen/rGPMqJ">codepen</a> example of pulling data from github api into css grid via react</li>
     <li><span class="ltred">Potential Blocks:</span>none!</li>
   </ol><br>
   <h3>Done: </h3>
