--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -3,7 +3,7 @@
   <div class="journal-entry entry">
 
     <!--
-    <h2 class="date">Wednesday October 18th, 2017</h2>
+    <h2 class="date">Monday October 23rd, 2017</h2>
     <h4 class="sleep">Slept: 5 hours</h4><br><br>
     <h3 class="subtitle">Doing <a></a></h3>
 <blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
@@ -18,10 +18,24 @@
     <ol class="done">
       <li>PLACEHOLDERDONETASKS</li>
     </ol>
-https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-contents
     <hr />
 
   -->
+  <h2 class="date">Monday October 23rd, 2017</h2>
+  <h4 class="sleep">Slept: 5 hours</h4><br><br>
+  <h3 class="subtitle">Strides at work on woof.js for curriculum development. Much accomplished there, but none posted here. Lots of prep for react component work and explanation of simple styled-(inline styles) components. I might be able to slip this in before bed tonight. Many thanks to <a href="https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-contents">pluralsight's</a> course </h3>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Entry in React view for function vs class components</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span> perfection is the enemy of good.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Wednesday October 18th, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Doing <a target="_blank" href="https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-contents">Pluralsight</a>'s training. The basic stuff is coming easier. Going thru basics is necessary and I'm actually enjoying it. I'm learning over and over it's important to crawl before I walk.</h3>
@@ -36,7 +50,7 @@ https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-co
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Game creation progress done</li>
   </ol>
 
   <hr />
