--- a/states/react/react.html
+++ b/states/react/react.html
@@ -6,6 +6,10 @@
     <!--entire page pre-->
     <div class="plain-frame3"><img class="w20 fRight" src="./img/colornum.png" alt="colornum">
       <h2 class="chtitle">Two Buttons iterating on an array to style a component</h2>
+      <div class="brdr-w">
+        fiddle:
+        <script class="w50 ctr" async src="//jsfiddle.net/beau_dev/xkkxb5a9/3/embed/js,html,css,result/dark/"></script>
+      </div>
 
 <pre class="w50 prettyprint ctr">
 class Button extends React.Component {
