--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,6 +21,25 @@
     <hr />
 
   -->
+  <h2 class="date">Monday November 2nd, 2017</h2>
+  <h4 class="sleep">Slept: 8 hours</h4><br><br>
+  <h3 class="subtitle">Working on React--always and often adding notes to the Journal as often as possible. Completed a complete lesson in JS curriculum at work. It is a good beginning with 30 animated slides. --Google Docs slides suck, by the way.</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en">
+  <p lang="en" dir="ltr">Learn how to create a smooth sliding menu: <a href="https://t.co/aCwYQzsXOb">https://t.co/aCwYQzsXOb</a> (Part 2 will fix a major perf issue. Can you spot it?) 😡 <a href="https://twitter.com/hashtag/ui?src=hash&amp;ref_src=twsrc%5Etfw">#ui</a> <a href="https://twitter.com/hashtag/reactjs?src=hash&amp;ref_src=twsrc%5Etfw">#reactjs</a></p>&mdash; Kirupa 🍊 (@kirupa) <a href="https://twitter.com/kirupa/status/924491891571224576?ref_src=twsrc%5Etfw">October 29, 2017</a></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>add article on 'this' and arrow functions</li>
+    <li>es6 method syntax and access (or lack thereof) to this in certain contexts (javascript view)</li>
+    <li><span class="ltred">Potential Blocks:</span> lots of curriculum dev to complete</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>arrow functions & 'this' discussion-done</li>
+    <li>es6 method syntax entry-done</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Monday October 23rd, 2017</h2>
   <h4 class="sleep">Slept: 5 hours</h4><br><br>
   <h3 class="subtitle">Strides at work on woof.js for curriculum development. Much accomplished there, but none posted here. Lots of prep for react component work and explanation of simple styled-(inline styles) components. I might be able to slip this in before bed tonight. Many thanks to <a href="https://app.pluralsight.com/library/courses/react-js-getting-started/table-of-contents">pluralsight's</a> course </h3>
@@ -33,7 +52,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>class component entry-done</li>
   </ol>
   <hr />
   <h2 class="date">Wednesday October 18th, 2017</h2>
