--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -48,7 +48,7 @@
   <ol class="todo">
     <li>Entry in React view for function vs class components</li>
     <li></li>
-    <li><span class="ltred">Potential Blocks:</span> perfection is the enemy of good.</li>
+    <li><span class="ltred">Potential Blocks:</span> perfection is the enemy of the good.</li>
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
