--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -21,6 +21,27 @@
     <hr />
 
   -->
+  <h2 class="date">Monday November 9th, 2017</h2>
+  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h3 class="subtitle">Learning a great deal about typography, style guides, design concepts storyboards.... lots and lots of training going on. <a href="http://www.kerriaugenstein.com/" target="_blank">This woman's training is phenomenal</a> Material design is, I'm descovering, not complete shite after all.<br />
+  Also, for work, I'm working on a site for kids and Javascript via woof.js. The creator expressed interest in including my lessons in his syllabus/manual. <br>
+<img  class="w30" src="./img/hccjs.png" alt=""> <br />
+It's just an example...A proof of concept. It one person loved it. One hated it and said "it looks like it's a site from the 90s..." --ouch!..."the whole thing has to be reworked..." --It was an interesting exchange. He's not wrong... he just didn't mention specifics. "Diamonds don't work..." I'd be far more persuaded by the critique if he were to mention specifics.<br />
+By the way... I'm not offended at all. In fact, I really like the guy and respect his opinion. --But I learnt a lot about the importance of the manner inwhich you critique being often as important as the critique itself.</h3>
+<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>PlaceholderForTasks</li>
+    <li></li>
+    <li><span class="ltred">Potential Blocks:</span></li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+
   <h2 class="date">Monday November 2nd, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
   <h3 class="subtitle">Working on React--always and often adding notes to the Journal as often as possible. Completed a complete lesson in JS curriculum at work. It is a good beginning with 30 animated slides. --Google Docs slides suck, by the way.</h3>
