--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -28,12 +28,11 @@
 <img  class="w30" src="./img/hccjs.png" alt=""> <br />
 It's just an example...A proof of concept. It one person loved it. One hated it and said "it looks like it's a site from the 90s..." --ouch!..."the whole thing has to be reworked..." --It was an interesting exchange. He's not wrong... he just didn't mention specifics. "Diamonds don't work..." I'd be far more persuaded by the critique if he were to mention specifics.<br />
 By the way... I'm not offended at all. In fact, I really like the guy and respect his opinion. --But I learnt a lot about the importance of the manner inwhich you critique being often as important as the critique itself.</h3>
-<blockquote class="twitter-tweet" data-dnt="true" data-align="right" data-width="20vw" data-cards="hidden" data-lang="en"><p lang="en" dir="ltr"></blockquote>
   <br>
   <h3>To do:</h3>
   <ol class="todo">
-    <li>PlaceholderForTasks</li>
-    <li></li>
+    <li>Studying Python today. I forget how much fun it is!</li>
+    <li>Put site (for work) into JSX components</li>
     <li><span class="ltred">Potential Blocks:</span></li>
   </ol><br>
   <h3>Done: </h3>
