finish journal entry

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -35,11 +35,11 @@ By the way... I'm not offended at all. In fact, I really like the guy and respec
     <li>Put site (for work) into JSX components</li>
     <li><span class="ltred">Potential Blocks:</span></li>
   </ol><br>
-  <h3>Done: </h3>
+  <h3>Done:</h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>Completed Python work for class tomorrow. It feels so easy and fun... I'm enjoying it too much & feel like I'm cheating on a lover.</li>
   </ol>
-  <hr />
+  <hr/>
 
   <h2 class="date">Monday November 2nd, 2017</h2>
   <h4 class="sleep">Slept: 8 hours</h4><br><br>
